import { ScriptStore } from "./ScriptStore";

it("reliably detects existence", async () => {
  expect(await ScriptStore.exists("test/fixtures/default")).toBe(true);
  expect(await ScriptStore.exists("invalid")).toBe(false);
});

it("should load an existing store", async () => {
  const store = new ScriptStore("test/fixtures/default");
  await store.load();

  expect(store.comment).toStrictEqual("This file is generated by node-scripts-docs.");
  expect(store.globalScripts).toMatchSnapshot();
  expect(store.scripts).toMatchSnapshot();
  expect(store.version).toStrictEqual(1);
});

it("parses locator as expected", () => {
  const parsed = ScriptStore.parseScriptLocator("test:coverage→node-scripts-docs");
  expect(parsed.projectName).toStrictEqual("node-scripts-docs");
  expect(parsed.scriptName).toStrictEqual("test:coverage");
});

it("renders locator as expected", () => {
  const rendered = ScriptStore.makeScriptLocator("node-scripts-docs", "test:coverage");
  expect(rendered).toStrictEqual("test:coverage→node-scripts-docs");
});
